--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,38 +5,27 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.main_container{
+  display: grid;
+  grid-template-columns: 400px auto 40%;
+  gap: 24px
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.header_container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1120px;
+height: 48px;
+  border-radius: 24px;
+  border: 1px solid var(--Blueberry, #D4DEFE);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.header_input{
+  width: 1026px;
+  height: 33px;
+  background: initial;
+  border: none;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.header_input:focus-visible{
+  border:none;
+  outline: none;
 }
